fix align

--- a/main.css
+++ b/main.css
@@ -159,7 +159,7 @@ header{
 
 .button:hover{color:white;}
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 800px) {
 
     .name{
     
@@ -173,9 +173,13 @@ header{
     }
 
 
+    .hello{
+        margin-left: -67px;
+    }
+
 }
     
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
     body{
     margin:0;
     margin-bottom:100px;
